--- a/src/Pages/Details/ProductDetailes.module.css
+++ b/src/Pages/Details/ProductDetailes.module.css
@@ -1,28 +1,20 @@
-.container{
-    display: 'flex';
-  }
-.productImageDiv{
-    width: 20%;
+.detailCard{
+    width: 100%;
+    height: max-content;
+    background-color: rgb(160, 156, 156);
 }
-.ProductImage{
-    width: 300px;
-    height: 480px;
-    margin-top: 20px;
-    margin-left: 20px;
-}
-.details{
-    width: 60%,
-}
+.ProdImage{
+    width: 600px;
+    height: 400px;
+    border-radius: 5px;
+    margin: 20px;
 
-.buyButton{
-    background-color: #4CAF50;
-    text-align: center;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer
+}
+.productImage{
+    width: 40%;
+
+}
+.productInfo{
+    width: 60%;
+    vertical-align: baseline;
 }
