--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,11 +1,12 @@
 .footer {
-    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 10vh; /* This sets the height to 15% of the viewport height */
+    height: 10vh; 
     background-color: #4969b0;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: fixed;
+
 }
